# Vara

./: .gitignore  README.md  docker-mysql.yml  pyproject.toml
myapp/: admin.py  forms.py  models.py  urls.py  views.py
myapp/migrations/: 0001_initial.py  0002_videolike.py  0003_useravatar.py  0004_alter_tag_name_alter_useravatar_avatar.py  0005_video_likes.py  0006_remove_videolike_user_remove_videolike_video_and_more.py  0007_alter_video_likes_alter_video_tags.py  0008_alter_video_tags.py  0009_alter_video_tags.py  0010_video_video_file_alter_video_url.py  0011_video_thumbnail.py
myapp/static/css/: style.css
myapp/templates/myapp/: avatar_upload.html  base.html  login.html  mypage.html  register.html  tag_detail.html  video_create.html  video_detail.html  video_list.html  video_update.html
static/css/: style.css
vara/: asgi.py  settings.py  urls.py  wsgi.py
